--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8090
-management.security.enabled=false
+
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:~/test
