--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -89,10 +89,11 @@
             <version>RELEASE</version>
         </dependency>
 
+
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>1.5.9.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 
